Added second export to csv button
Signed-off-by: aksie <aksie@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <div class="summary">
                 <h3>Overall Average Score</h3>
                 <div id="avg-score">—</div>
+                <button class="summary-export-btn" onclick="exportToCSV()">[ Export CSV ]</button>
             </div>
         </div>
     </div>
