Add overview card with process index grouped by priority and category
Signed-off-by: aksie <aksie@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                 </div>
             </div>
 
+            <div id="overview-card">
+                <!-- Populated by JavaScript -->
+            </div>
+
             <div id="processes-container">
                 <!-- Populated by JavaScript -->
             </div>
