UX improvements: progress bar, category headers, priority colours
- Sticky progress bar tracking scored processes
- Category headers between process groups
- Recoloured priority labels: green / muted green / grey
- Button style reset to fix white background in Chrome/Safari

Signed-off-by: aksie <aksie@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         </div>
     </header>
 
+    <div id="progress-bar" class="progress-bar"></div>
+
     <div class="container">
         <!-- Pill Selectors -->
         <div class="pill-selectors">
